# tack-jepa

./: .gitignore  LICENSE  PRD.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
assets/: taxel_layout.npz
assets/urdf/: README.md
azure/: README.md
data/: __init__.py  dataset.py  graph_construction.py  shard_writer.py
demo/: README.md  app.py  gen_frames.py
demo/site/: index.html
demo/site/assets/: frames.json
docker/: sim.Dockerfile  train.Dockerfile
docs/: literature.md
eval/: __init__.py  collapse_canary.py  downstream_transfer.py  metrics.py  physics_probes_eval.py  plot_training.py
models/: __init__.py  encoder.py  jepa_loss.py  predictor.py  probes.py
models/ablations/: __init__.py  image_native.py  reconstruction.py
nebius/: README.md  launch_training.sh
sim/: __init__.py  episode_generator.py  episode_processing.py  forward_kinematics.py  hand_env.py  superquadric.py  taxel_force_synthesis.py  taxel_layout.py  visualize.py
tests/: test_config_and_metrics.py  test_dataset.py  test_dof_order_conversion.py  test_fk_vs_genesis.py  test_forward_kinematics.py  test_graph_construction.py  test_hand_env.py  test_jepa_components.py  test_models.py  test_smoke.py  test_taxel_force_synthesis.py  test_taxel_layout.py
training/: __init__.py  config.py  curriculum.py  ema.py  train.py
training/configs/: README.md  base.yaml  image_native.yaml  no_fk.yaml  no_vicreg.yaml  phase4_cpu.yaml  reconstruction.yaml
