[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tack-jepa"
version = "0.1.0"
description = "TacK-JEPA: force-native, kinematically-grounded, action-conditioned tactile world model for articulated multi-taxel hands"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
# Core numeric deps needed by sim/data/eval modules (and their CI tests).
# Heavier stacks live in extras below and are added per phase — see ROADMAP.md.
dependencies = [
    "numpy==2.2.6",
    "scipy==1.15.3",
    "pyyaml==6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
]
# Heavy stacks live in extras so CI (dev-only) stays fast; tests that need
# them use pytest.importorskip and simply skip where they're absent.
sim = [
    "genesis-world==1.2.1",
    # genesis imports torch but does not declare it (users pick their variant);
    # local dev uses CPU wheels: pip install torch --index-url https://download.pytorch.org/whl/cpu
]
ml = [
    "torch==2.12.1",
    "torch_geometric==2.8.0",
    "webdataset==1.0.2",
]

[tool.setuptools]
packages = ["sim", "data", "models", "models.ablations", "training", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
